[tool.poetry]
name = "testapi"
version = "0.1.0"
description = ""
authors = ["Valentin Vivaldi <valentin.vivaldi@smfconsulting.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.27"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
